[tool.poetry]
name = "diffusion-box"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"
packages = [{include = "diffusion_box", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = {extras = ["torch"], version = "^0.7.2"}
transformers = "^4.24.0"
scipy = "^1.9.3"
ftfy = "^6.1.1"
nltk = "^3.7"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diffusion-box = "diffusion_box.__main__:main"